# clockwise-square-nums

./: .gitignore  README.md  clockwise_square_nums_cli.py  pyproject.toml  requirements.txt
clockwise_square_nums/: __init__.py  clockwise_square_nums.py
tests/: test_cli.py  test_clockwise_square_nums.py
